포인트 내역조회 초안 작성