@@ -10,7 +10,8 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.web.bind.annotation.*;
 
-import java.util.List;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @RestController
 @RequiredArgsConstructor
@@ -21,32 +22,32 @@ public class PointController {
     private final PointService pointService;
     private final JwtTokenProvider jwtTokenProvider;
 
-    @PostMapping("/point/new")
-    void addPoint(@RequestBody PointIn pointIn) {
-        log.info("INPUT Object Data is : {}", pointIn);
-        PointAddDto pointAddDto = PointAddDto.builder()
-                .pointType(pointIn.getPointType())
-                .point(pointIn.getPoint())
-                .used(pointIn.getUsed())
-                .loginId(pointIn.getLoginId())
-                .build();
-        pointService.createPoint(pointAddDto);
-    }
+//    @PostMapping("/point/new")
+//    void addPoint(@RequestBody PointIn pointIn) {
+//        log.info("INPUT Object Data is : {}", pointIn);
+//        PointAddDto pointAddDto = PointAddDto.builder()
+//                .pointType(pointIn.getPointType())
+//                .point(pointIn.getPoint())
+//                .used(pointIn.getUsed())
+//                .loginId(pointIn.getLoginId())
+//                .build();
+//        pointService.createPoint(pointAddDto);
+//    }
 
     @GetMapping("/point")
-    public List<PointOut> getPointByUser(@RequestHeader String token) {
-        if (token ==null){
+    public List<PointOut> getUserPointHistory(@RequestHeader String token) {
+        if (token == null) {
             return null;
         }
-        String userId = jwtTokenProvider.getLoginId(token);
-        List<PointGetDto> pointListByUser = pointService.getPointByUser(userId);
+        UUID uuid = jwtTokenProvider.getUuid(token);
+        List<PointGetDto> pointListByUser = pointService.getPointByUser(uuid);
         List<PointOut> pointOutList = pointListByUser.stream().map(pointGetDto -> {
             return PointOut.builder()
                     .pointType(pointGetDto.getPointType())
                     .point(pointGetDto.getPoint())
                     .used(pointGetDto.getUsed())
                     .build();
-        }).toList();
+        }).collect(Collectors.toList());
         log.info("OUTPUT pointOutList is : {}", pointOutList);
         return pointOutList;
     }
